# openstore-app

./: .ackrc  .bzrignore  .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  clickable.json  clickable.yaml  focal-build.sh  git-mirror.sh  manifest.json.in  openstore-contenthub.json  openstore.apparmor  openstore.desktop.in  openstore.pro  openstore.url-dispatcher
.github/: copilot-instructions.md
cmake/: FindPAM.cmake
openstore/: AppDetailsPage.qml  AppLocalDetailsPage.qml  AuthenticationHandler.qml  CachingNetworkManagerFactory.cpp  CategoriesModel.qml  CategoriesPage.qml  CategoriesTab.qml  DiscoverTab.qml  EmptyState.qml  FilteredAppView.qml  HookIcon.qml  InstalledAppsTab.qml  Main.qml  MainPage.qml  NoMatchEmptyState.qml  PasswordDialog.qml  SearchPage.qml  SearchTab.qml  SectionDivider.qml  SettingsPage.qml  SignInWebView.qml  TextualButtonStyle.qml  apiconstants.h  appmodel.cpp  appmodel.h  cachingnetworkmanagerfactory.cpp  cachingnetworkmanagerfactory.h  categoriesmodel.cpp  categoriesmodel.h  clickinstaller.cpp  clickinstaller.h  discovermodel.cpp  discovermodel.h  main.cpp  openstore.apparmor  openstore.desktop  openstore.pro  openstore.qrc  openstore.url-dispatcher  openstorenetworkmanager.cpp  (+19 more)
openstore/Components/: BottomEdgePageStack.qml  BottomNavigationBar.qml  ButtonEmoji.qml  ConvergentTabView.qml  EmptyState.qml  HeaderMain.qml  HighlightedApp.qml  LabelCentered.qml  LeftNavigationBar.qml  MostRated.qml  OpenStoreCarousel.qml  PackageListItem.qml  PackageTile.qml  RatingsRow.qml  ReviewItem.qml  ReviewItemVertical.qml  ReviewPreview.qml  ScreenshotImage.qml  ScreenshotsCarousel.qml  SectionDivider.qml
openstore/js/: inject.js
osserviceregistry/: main.cpp  osserviceregistry.pro  serviceregistry.cpp  serviceregistry.h
plugins/: CMakeLists.txt
po/: CMakeLists.txt  ar.po  ast.po  be.po  ber.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hu.po  it.po  ja.po  ko.po  lt.po  ml.po  nb_NO.po  nl.po  openstore.openstore-team.pot  openstore_WEB-CA.po  pl.po  pt.po  pt_BR.po  pt_PT.po  ro.po  ru.po  sc.po  si.po  (+13 more)
qml/: AppDetailsPage.qml  AppLocalDetailsPage.qml  CategoriesPage.qml  CategoriesTab.qml  DiscoverPage.qml  FilteredAppList.qml  InstalledAppsPage.qml  Main.qml  PasswordDialog.qml  SearchPage.qml  SearchTab.qml  SettingsPage.qml  SignInPage.qml  TextualButtonStyle.qml  qml.qrc
qml/Components/: BottomEdgePageStack.qml  ButtonEmoji.qml  ContentRating.qml  EmptyState.qml  HeaderBase.qml  HeaderMain.qml  HighlightedApp.qml  HookIcon.qml  LabelCentered.qml  LineDivider.qml  MostRated.qml  OpenStoreCarousel.qml  PackageListItem.qml  PackageTile.qml  RatingsRow.qml  ReviewItem.qml  ReviewItemVertical.qml  ReviewPreview.qml  ScreenshotImage.qml  ScreenshotsCarousel.qml  SectionDivider.qml
qml/Dialogs/: DomainWarningDialog.qml  DonationDialog.qml  FilterDialog.qml  InstallWarningDialog.qml  NegativeReviewDialog.qml  SnapWarningDialog.qml  UnconfinedWarningDialog.qml  UninstallDialog.qml
qml/js/: inject.js
scripts/: check-format.sh  check.sh  format-code.sh  format.sh  lint-qml.sh
src/: CMakeLists.txt  apiconstants.h  cachingnetworkmanagerfactory.cpp  cachingnetworkmanagerfactory.h  clickbackend.cpp  clickbackend.h  clickinstaller.cpp  clickinstaller.h  clickpackage.cpp  clickpackage.h  discovermodel.cpp  main.cpp  openstorenetworkmanager.cpp  openstorenetworkmanager.h  package.cpp  package.h  packagebackend.h  packagebackendmanager.cpp  packagebackendmanager.h  packagescache.cpp  packagescache.h  platformintegration.cpp  platformintegration.h  review.cpp  review.h  reviewsmodel.cpp  reviewsmodel.h  serviceregistry.cpp  serviceregistry.h  snapbackend.cpp  snapbackend.h  snappackage.cpp  snappackage.h
src/models/: categoriesmodel.cpp  categoriesmodel.h  discovermodel.cpp  discovermodel.h  localpackagesmodel.cpp  localpackagesmodel.h  packagesmodel.cpp  reviewsmodel.cpp  reviewsmodel.h  searchmodel.cpp  searchmodel.h
tools/docker/: Dockerfile  docker-runner.sh  run-docker-tools.sh  tools-entrypoint.sh
